--- a/index.html
+++ b/index.html
@@ -260,6 +260,8 @@
                 font-size: 1.5rem;
             }
         }
+
+</style>
     </style>
 </head>
 <body>
@@ -348,11 +350,40 @@
     </section>
 
 
-	<section id ="projets" class="section">
-		<h2 class="section-title">Projets</h2>
-		<div class="skill-grid">
-			<div class="skill-card">
+<section id="projets" class="section">
+    <h2 class="section-title">Projets</h2>
+    <div class="skills-grid">
+        <div class="skill-card">
+            <h3>Projet itération 2</h3>
+            <a href="https://projetiteration.tiiny.site/" class="pdf-button" target="_blank">
+                <i class="fas fa-external-link-alt"></i> <!-- Icône de lien externe -->
+                Voir le projet
+            </a>
+        </div>
+    </div>
+</section>
 
+<style>
+.pdf-button {
+    display: inline-block;
+    padding: 10px 20px;
+    background: #3498db;
+    color: white;
+    border-radius: 5px;
+    text-decoration: none;
+    transition: transform 0.3s, background 0.3s;
+    margin: 10px;
+}
+
+.pdf-button:hover {
+    background: #2980b9;
+    transform: translateY(-2px);
+}
+
+.pdf-button i {
+    margin-right: 8px;
+}
+</style>
 
 
     <section id="bts-sio" class="section">
