--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
         <div class="skill-card">
             <h3>Projet itération 2</h3>
             <a href="https://projetiteration.tiiny.site/" class="pdf-button" target="_blank">
-                <i class="fas fa-external-link-alt"></i> <!-- Icône de lien externe -->
+                <i class="fas fa-external-link-alt"></i> 
                 Voir le projet
             </a>
         </div>
