--- a/index.html
+++ b/index.html
@@ -6,263 +6,7 @@
     <title>Anzo Lo | Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Montserrat', sans-serif;
-        }
-
-        body {
-            background-color: #f8f9fa;
-            color: #2c3e50;
-            line-height: 1.6;
-        }
-
-        /* Header & Navigation */
-        header {
-            background: linear-gradient(135deg, #1a1a1a 0%, #363636 100%);
-            color: white;
-            padding: 2rem 0;
-            text-align: center;
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            position: relative;
-        }
-
-        .nav-container {
-            position: fixed;
-            top: 0;
-            width: 100%;
-            background: rgba(26, 26, 26, 0.95);
-            z-index: 1000;
-            padding: 1rem 0;
-        }
-
-        nav {
-            max-width: 1200px;
-            margin: 0 auto;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 0 2rem;
-        }
-
-        .logo {
-            font-size: 1.5rem;
-            font-weight: 700;
-            color: white;
-            text-decoration: none;
-        }
-
-        .nav-links {
-            display: flex;
-            gap: 2rem;
-            list-style: none;
-        }
-
-        .nav-links a {
-            color: white;
-            text-decoration: none;
-            font-weight: 500;
-            transition: color 0.3s;
-        }
-
-        .nav-links a:hover {
-            color: #3498db;
-        }
-
-        /* Hero Section */
-        .hero-content {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 0 2rem;
-        }
-
-        .hero-content h1 {
-            font-size: 3.5rem;
-            margin-bottom: 1rem;
-            letter-spacing: 2px;
-        }
-
-        .hero-content h2 {
-            font-size: 1.8rem;
-            font-weight: 400;
-            margin-bottom: 2rem;
-            color: #3498db;
-        }
-
-        .cta-button {
-            display: inline-block;
-            padding: 1rem 2rem;
-            background: #3498db;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            transition: transform 0.3s, background 0.3s;
-        }
-
-        .cta-button:hover {
-            background: #2980b9;
-            transform: translateY(-2px);
-        }
-
-        /* Sections */
-        .section {
-            padding: 5rem 0;
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-
-        .section-title {
-            text-align: center;
-            font-size: 2.5rem;
-            margin-bottom: 3rem;
-            position: relative;
-        }
-
-        .section-title::after {
-            content: '';
-            display: block;
-            width: 50px;
-            height: 3px;
-            background: #3498db;
-            margin: 1rem auto;
-        }
-
-        /* Timeline */
-        .timeline {
-            position: relative;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 2rem;
-        }
-
-        .timeline::before {
-            content: '';
-            position: absolute;
-            left: 50%;
-            width: 2px;
-            height: 100%;
-            background: #3498db;
-            transform: translateX(-50%);
-        }
-
-        .timeline-item {
-            margin-bottom: 3rem;
-            position: relative;
-            width: 50%;
-            padding: 0 2rem;
-        }
-
-        .timeline-item:nth-child(odd) {
-            left: 0;
-        }
-
-        .timeline-item:nth-child(even) {
-            left: 50%;
-        }
-
-        .timeline-content {
-            background: white;
-            padding: 1.5rem;
-            border-radius: 5px;
-            box-shadow: 0 3px 10px rgba(0,0,0,0.1);
-        }
-
-        /* Skills Section */
-        .skills-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 2rem;
-            padding: 2rem;
-        }
-
-        .skill-card {
-            background: white;
-            padding: 1.5rem;
-            border-radius: 5px;
-            box-shadow: 0 3px 10px rgba(0,0,0,0.1);
-            text-align: center;
-        }
-
-        /* Contact Section */
-        .contact-grid {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 2rem;
-            padding: 2rem;
-        }
-
-        .contact-info {
-            text-align: center;
-        }
-
-        .contact-item {
-            margin-bottom: 1rem;
-        }
-
-        .contact-item i {
-            color: #3498db;
-            margin-right: 0.5rem;
-        }
-
-        /* Footer */
-        footer {
-            background: #1a1a1a;
-            color: white;
-            text-align: center;
-            padding: 2rem 0;
-        }
-
-        .social-links {
-            margin-top: 1rem;
-        }
-
-        .social-links a {
-            color: white;
-            margin: 0 0.5rem;
-            font-size: 1.5rem;
-            transition: color 0.3s;
-        }
-
-        .social-links a:hover {
-            color: #3498db;
-        }
-
-        /* Responsive Design */
-        @media (max-width: 768px) {
-            .nav-links {
-                display: none;
-            }
-
-            .timeline::before {
-                left: 0;
-            }
-
-            .timeline-item {
-                width: 100%;
-                left: 0 !important;
-            }
-
-            .contact-grid {
-                grid-template-columns: 1fr;
-            }
-
-            .hero-content h1 {
-                font-size: 2.5rem;
-            }
-
-            .hero-content h2 {
-                font-size: 1.5rem;
-            }
-        }
-
-</style>
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="nav-container">
@@ -273,7 +17,7 @@
                 <li><a href="#profil">Profil</a></li>
                 <li><a href="#parcours">Parcours</a></li>
                 <li><a href="#competences">Compétences</a></li>
-				<li><a href="#projets">Projets</a></li>
+                <li><a href="#projets">Projets</a></li>
                 <li><a href="#bts-sio">BTS SIO</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
@@ -283,7 +27,7 @@
     <header id="accueil">
         <div class="hero-content">
             <h1>Anzo Lo</h1>
-            <h2>Étudiant BTS SIO SLAM|Passionné d'informatique</h2>
+            <h2>Étudiant BTS SIO SLAM | Passionné d'informatique</h2>
             <a href="#profil" class="cta-button">Découvrir mon profil</a>
         </div>
     </header>
@@ -291,8 +35,7 @@
     <section id="profil" class="section">
         <h2 class="section-title">À propos de moi</h2>
         <div class="profile-content">
-            <p>Je m'appelle Anzo Lo. Actuellement étudiant en BTS SIO option SLAM au lycée Charles de Foucauld, je suis passionné par l'informatique, avec un intérêt particulier pour le développement et la sécurité informatique. 
-				Mon objectif est de me spécialiser dans le pentesting tout en continuant à explorer la création de solutions innovantes et performantes.</p>
+            <p>Je m'appelle Anzo Lo. Actuellement étudiant en BTS SIO option SLAM au lycée Charles de Foucauld, je suis passionné par l'informatique, avec un intérêt particulier pour le développement et la sécurité informatique. Mon objectif est de me spécialiser dans le pentesting tout en continuant à explorer la création de solutions innovantes et performantes.</p>
         </div>
     </section>
 
@@ -349,42 +92,17 @@
         </div>
     </section>
 
-
-<section id="projets" class="section">
-    <h2 class="section-title">Projets</h2>
-    <div class="skills-grid">
-        <div class="skill-card">
-            <h3>Projet itération 2</h3>
-            <a href="https://projetiteration.tiiny.site/" class="pdf-button" target="_blank">
-                <i class="fas fa-external-link-alt"></i> 
-                Voir le projet
-            </a>
+    <section id="projets" class="section">
+        <h2 class="section-title">Projets</h2>
+        <div class="skills-grid">
+            <div class="skill-card">
+                <h3>Projet itération 2</h3>
+                <a href="https://projetiteration.tiiny.site/" class="pdf-button" target="_blank">
+                    <i class="fas fa-external-link-alt"></i> Voir le projet
+                </a>
+            </div>
         </div>
-    </div>
-</section>
-
-<style>
-.pdf-button {
-    display: inline-block;
-    padding: 10px 20px;
-    background: #3498db;
-    color: white;
-    border-radius: 5px;
-    text-decoration: none;
-    transition: transform 0.3s, background 0.3s;
-    margin: 10px;
-}
-
-.pdf-button:hover {
-    background: #2980b9;
-    transform: translateY(-2px);
-}
-
-.pdf-button i {
-    margin-right: 8px;
-}
-</style>
-
+    </section>
 
     <section id="bts-sio" class="section">
         <h2 class="section-title">BTS SIO</h2>
@@ -392,7 +110,7 @@
             <div class="skill-card">
                 <h3>Épreuve E4</h3>
                 <p>Support et mise à disposition de services informatiques</p>
-                <a href="#" class="cta-button">Voir le tableau de synthése</a>
+                <a href="#" class="cta-button">Voir le tableau de synthèse</a>
             </div>
             <div class="skill-card">
                 <h3>Épreuve E5</h3>
@@ -401,8 +119,6 @@
             </div>
         </div>
     </section>
-
-
 
     <section id="contact" class="section">
         <h2 class="section-title">Contact</h2>
@@ -435,25 +151,6 @@
         </div>
     </footer>
 
-    <script>
-        // Smooth scrolling for anchor links
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                document.querySelector(this.getAttribute('href')).scrollIntoView({
-                    behavior: 'smooth'
-                });
-            });
-        });
-
-        // Navbar color change on scroll
-        window.addEventListener('scroll', function() {
-            if (window.scrollY > 50) {
-                document.querySelector('.nav-container').style.background = 'rgba(26, 26, 26, 0.95)';
-            } else {
-                document.querySelector('.nav-container').style.background = 'rgba(26, 26, 26, 0.95)';
-            }
-        });
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
