--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
         <h2 class="section-title">À propos de moi</h2>
         <div class="profile-content">
             <p>Je m'appelle Anzo Lo. Actuellement étudiant en BTS SIO option SLAM au lycée Charles de Foucauld, je suis passionné par l'informatique, avec un intérêt particulier pour le développement et la sécurité informatique. Mon objectif est de me spécialiser dans le pentesting tout en continuant à explorer la création de solutions innovantes et performantes.</p>
+            <div class="cv-section">
+                <a href="https://cvalo.tiiny.site/" class="cv-button" target="_blank" download>
+                    <i class="fas fa-file-pdf"></i> Voir mon CV
         </div>
     </section>
 
