Ajout veille technologique

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li><a href="#competences">Compétences</a></li>
                 <li><a href="#projets">Projets</a></li>
                 <li><a href="#bts-sio">BTS SIO</a></li>
+                <li><a href="veille-technologique.html">Veille Technologique</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -125,7 +126,6 @@
             <!-- Option SISR -->
             <div class="skill-card" style="width: 45%; text-align: center;">
                 <h3>Option SISR - Solutions d'infrastructure, systèmes et réseaux</h3>
-
                 <p>
                     L’option <strong>Solutions d’infrastructure, systèmes et réseaux (SISR)</strong> forme des professionnels 
                     spécialisés dans l’installation, la maintenance, et la sécurité des systèmes informatiques. 
@@ -146,7 +146,6 @@
             <!-- Option SLAM -->
             <div class="skill-card" style="width: 45%; text-align: center;">
                 <h3>Option SLAM - Solutions logicielles et applications métiers</h3>
-                
                 <p>
                     L’option <strong>Solutions logicielles et applications métiers (SLAM)</strong> forme des spécialistes en développement de logiciels. 
                     Les étudiants apprendront à rédiger des cahiers des charges, à formuler des besoins techniques et fonctionnels, à développer des solutions logicielles, 
