--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="#competences">Compétences</a></li>
                 <li><a href="#projets">Projets</a></li>
                 <li><a href="#bts-sio">BTS SIO</a></li>
-                <li><a href="veille-technologique.html">Veille Technologique</a></li>
+                <li><a href="veille-technologique.html">Veille</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
