--- a/veille-technologique.html
+++ b/veille-technologique.html
@@ -5,24 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Veille Technologique</title>
     <link rel="stylesheet" href="style.css"> <!-- Utilisez votre fichier CSS existant -->
-    <style>
-        /* Style pour rendre les iframes visibles et bien dimensionnées */
-        iframe {
-            width: 100%;
-            height: 600px; /* Hauteur plus grande pour une meilleure visibilité */
-            border: 1px solid #ccc;
-            margin-bottom: 20px; /* Espacement entre les iframes */
-        }
-
-        /* Espacement et formatage du texte */
-        .container {
-            line-height: 1.6;
-        }
-
-        .ai-article {
-            margin-bottom: 40px;
-        }
-    </style>
 </head>
 <body>
     <!-- Barre de navigation -->
@@ -46,87 +28,39 @@
     <section class="section">
         <div class="container">
             <h1>Veille Technologique 📔</h1>
-            <br> <!-- Saut de ligne après le titre -->
-
             <h2>Qu'est-ce que la veille technologique ?</h2>
             <p>
                 La veille technologique consiste à surveiller de manière proactive les évolutions, les innovations et les tendances dans le domaine technologique. Cela implique la collecte, l'analyse et la diffusion d'informations stratégiques pour rester informé des dernières avancées, favoriser l'adaptation et rester compétitif sur le plan technologique. Elle vise à anticiper les changements et à exploiter les opportunités offertes par les nouvelles technologies.
             </p>
-            <br> <!-- Saut de ligne après cette section -->
-
             <h2>Les principaux outils de ma veille</h2>
             <p>
-                J'ai effectué ma veille technologique grâce aux newsletters telles que Feedly, un agrégateur de flux RSS, ainsi qu'à OpenAI.com, la newsletter des professionnels en Data Science. En plus des informations fournies chaque semaine/mois, j'ai quelques sites favoris permettant de me tenir au courant des dernières actualités telles que Hitek.fr, un site regroupant l’actualité High Tech et Geek, ou encore Hardware.fr, un site regroupant l'actualité sur les processeurs, les cartes graphiques, les cartes mères, etc.
+                J'ai effectué ma veille technologique grâce aux newsletters telles que Feedly, un agrégateur de flux RSS...
             </p>
-            <br> <!-- Saut de ligne après cette section -->
-
             <h2>Sujet de ma veille</h2>
             <p>
-                Pour ma veille technologique, j'ai décidé de traiter le sujet de l'IA. Ma thématique est : *Quel est le futur de l'intelligence artificielle dans notre société ?*
+                Pour ma veille technologique, j'ai décidé de traiter le sujet de l'IA. Ma thématique est : *Quel est le futur de l'intelligence artificielle dans notre société ?
             </p>
-            <br> <!-- Saut de ligne après cette section -->
 
-            <!-- Section avec des articles récents sur l'IA -->
-            <section class="ai-news">
-                <h2>Actualités récentes sur l'Intelligence Artificielle</h2>
-                <br> <!-- Saut de ligne avant les articles -->
+            <h2>Actualités récentes sur l'IA</h2>
 
-                <!-- Article 1: OpenAI et partenariat avec Apple -->
-                <div class="ai-article">
-                    <h3>OpenAI et Apple annoncent un partenariat</h3>
-                    <iframe src="https://openai.com/research/partnership-with-apple" frameborder="0" allowfullscreen>
-                        Ce navigateur ne prend pas en charge les iframes.
-                    </iframe>
-                    <p>OpenAI a annoncé un partenariat avec Apple pour intégrer ChatGPT dans les produits Apple. Cela permettra d'améliorer l'interaction des utilisateurs avec des outils comme Siri et autres technologies Apple.</p>
-                    <p><a href="https://openai.com/research/partnership-with-apple" target="_blank">Lire l'article complet sur OpenAI</a></p>
-                </div>
-                <br>
+            <!-- Article 1: Reasoning AI Models by TechCrunch -->
+            <iframe src="https://techcrunch.com/2024/12/14/reasoning-ai-models-have-become-a-trend-for-better-or-worse/" width="100%" height="600px"></iframe>
+            <br><br>
 
-                <!-- Article 2: Un avenir prometteur pour l'IA dans le domaine de la santé -->
-                <div class="ai-article">
-                    <h3>L'IA révolutionne le secteur de la santé</h3>
-                    <iframe src="https://www.healthcareitnews.com/news/ai-transforming-healthcare" frameborder="0" allowfullscreen>
-                        Ce navigateur ne prend pas en charge les iframes.
-                    </iframe>
-                    <p>Les applications de l'intelligence artificielle dans le domaine de la santé, telles que les diagnostics assistés par IA et les robots chirurgicaux, transforment les soins de santé.</p>
-                    <p><a href="https://www.healthcareitnews.com/news/ai-transforming-healthcare" target="_blank">Lire l'article complet sur Healthcare IT News</a></p>
-                </div>
-                <br>
+            <!-- Article 2: OpenAI and Apple Partnership -->
+            <iframe src="https://openai.com/index/openai-and-apple-announce-partnership/" width="100%" height="600px"></iframe>
+            <br><br>
 
-                <!-- Article 3: Les implications éthiques de l'intelligence artificielle -->
-                <div class="ai-article">
-                    <h3>Les défis éthiques de l'Intelligence Artificielle</h3>
-                    <iframe src="https://www.theverge.com/2024/ai-ethics-and-regulations" frameborder="0" allowfullscreen>
-                        Ce navigateur ne prend pas en charge les iframes.
-                    </iframe>
-                    <p>L'intelligence artificielle soulève des questions éthiques cruciales, notamment en matière de confidentialité, de biais algorithmique et d'impact sur l'emploi.</p>
-                    <p><a href="https://www.theverge.com/2024/ai-ethics-and-regulations" target="_blank">Lire l'article complet sur The Verge</a></p>
-                </div>
-                <br>
+            <!-- Article 3: AI Ethics by Techniques Ingenieur -->
+            <iframe src="https://www.techniques-ingenieur.fr/actualite/articles/connaitre-les-enjeux-d-une-ia-ethique-et-durable-140169/" width="100%" height="600px"></iframe>
+            <br><br>
 
-                <!-- Article 4: Avancées récentes dans les applications de l'IA -->
-                <div class="ai-article">
-                    <h3>Les dernières avancées technologiques de l'IA</h3>
-                    <iframe src="https://www.techcrunch.com/ai-recent-advancements" frameborder="0" allowfullscreen>
-                        Ce navigateur ne prend pas en charge les iframes.
-                    </iframe>
-                    <p>Les progrès récents dans le domaine de l'intelligence artificielle incluent des algorithmes plus efficaces et des modèles de langage de plus en plus puissants.</p>
-                    <p><a href="https://www.techcrunch.com/ai-recent-advancements" target="_blank">Lire l'article complet sur TechCrunch</a></p>
-                </div>
-                <br>
-
-                <!-- Article 5: OpenAI GPT-4 et ses applications -->
-                <div class="ai-article">
-                    <h3>GPT-4 et ses nouvelles capacités</h3>
-                    <iframe src="https://openai.com/gpt-4-enhancements" frameborder="0" allowfullscreen>
-                        Ce navigateur ne prend pas en charge les iframes.
-                    </iframe>
-                    <p>GPT-4 continue d'évoluer et offre des capacités de génération de texte encore plus avancées. Cette version permet des applications plus créatives dans les domaines de la rédaction, de la recherche et de la compréhension du langage naturel.</p>
-                    <p><a href="https://openai.com/gpt-4-enhancements" target="_blank">Lire l'article complet sur OpenAI</a></p>
-                </div>
-            </section>
+            <!-- Article 4: GPT-5 by Les Numeriques -->
+            <iframe src="https://www.lesnumeriques.com/intelligence-artificielle/gpt-5-openai-continue-de-teaser-la-puissance-de-son-futur-modele-n223817.html" width="100%" height="600px"></iframe>
+            <br><br>
         </div>
     </section>
 </body>
 </html>
+
 
