--- a/veille-technologique.html
+++ b/veille-technologique.html
@@ -18,7 +18,7 @@
                 <li><a href="portfolio.html#competences">Compétences</a></li>
                 <li><a href="portfolio.html#projets">Projets</a></li>
                 <li><a href="portfolio.html#bts">BTS SIO</a></li>
-                <li><a href="veille-technologique.html">Veille Technologique</a></li>
+                <li><a href="veille-technologique.html">Veille</a></li>
                 <li><a href="portfolio.html#contact">Contact</a></li>
             </ul>
         </nav>
