Modif section epreuve e4

--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
             </div>
         </div>
     
-       <!-- Épreuve E4 -->
-       <div class="skills-grid" style="display: flex; justify-content: center; margin-top: 40px;">
+      <!-- Épreuve E4 -->
+      <div class="skills-grid" style="display: flex; justify-content: center; margin-top: 40px;">
         <div class="skill-card" style="width: 70%; text-align: center;">
             <h3>Épreuve E4</h3>
             <p><strong>Informations de l'Épreuve :</strong></p>
@@ -178,11 +178,16 @@
             </ul>
             <p><strong>Présentation de l'Épreuve E4</strong></p>
             <p>Cette épreuve vise à évaluer chez la personne candidate l’acquisition des compétences décrites dans le bloc de compétences « Support et mise à disposition de services informatiques ».</p>
+            <br>
             <p><strong>Modalités d'évaluation :</strong></p>
             <p>Forme ponctuelle orale (durée 40 minutes) :</p>
+            <br>
             <p>
-                L’épreuve comporte deux phases consécutives. Pendant 10 minutes (maximum), la personne candidate présente son parcours de professionnalisation et justifie les modalités d’acquisition des compétences du bloc « Support et mise à disposition de services informatiques ». S’ensuit 30 minutes d’échange avec le jury qui permettent d’expliciter et d’apprécier le parcours de professionnalisation ainsi qu’une ou plusieurs réalisations décrites dans le dossier numérique.
+                L’épreuve comporte deux phases consécutives. Pendant 10 minutes (maximum), la personne candidate présente son parcours de professionnalisation et justifie les modalités d’acquisition des compétences du bloc « Support et mise à disposition de services informatiques ».
+                <br>
+                S’ensuit 30 minutes d’échange avec le jury qui permettent d’expliciter et d’apprécier le parcours de professionnalisation ainsi qu’une ou plusieurs réalisations décrites dans le dossier numérique.
             </p>
+            <br>
             <a href="#" class="cta-button" style="margin-top: 20px;">Voir le tableau de synthèse</a>
         </div>
     </div>
