Ajout tableau de synthése

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                 S’ensuit 30 minutes d’échange avec le jury qui permettent d’expliciter et d’apprécier le parcours de professionnalisation ainsi qu’une ou plusieurs réalisations décrites dans le dossier numérique.
             </p>
             <br>
-            <a href="#" class="cta-button" style="margin-top: 20px;">Voir le tableau de synthèse</a>
+            <a href="https://ufile.io/lzpaix87" class="cta-button" style="margin-top: 20px;" target="_blank">Voir le tableau de synthèse</a>
         </div>
     </div>
 </section>
