Ajout stage et projet

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <li><a href="#accueil">Accueil</a></li>
                 <li><a href="#profil">Profil</a></li>
                 <li><a href="#parcours">Parcours</a></li>
+                <li><a href="#experiences">Expériences</a></li>
                 <li><a href="#competences">Compétences</a></li>
                 <li><a href="#projets">Projets</a></li>
                 <li><a href="#bts-sio">BTS SIO</a></li>
@@ -75,6 +76,25 @@
         </div>
     </section>
 
+    <section id="experiences" class="section">
+        <h2 class="section-title">Expériences</h2>
+        <div class="timeline">
+            <div class="timeline-item">
+                <div class="timeline-content">
+                    <h3>Avril à Juin 2024</h3>
+                    <h4>Stage à la DGFIP</h4>
+                    <p>
+                        <ul>
+                            <li>Installation, configuration et déploiement d'un serveur d'échange de fichiers (CFT) en environnement virtualisé.</li>
+                            <li>Développement d'un outil de scripting Bash permettant l'automatisation des tests d'une application.</li>
+                            <li>Vérifications de codes dans le cadre d'un audit d'accessibilité.</li>
+                        </ul>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section id="competences" class="section">
         <h2 class="section-title">Compétences</h2>
         <div class="skills-grid">
@@ -88,15 +108,20 @@
                 <h3>Base de données</h3>
                 <p>MySQL, PostgreSQL</p>
             </div>
-            <div class="skill-card">
-                <i class="fas fa-mobile-alt fa-2x"></i>
-                <h3>Développement Mobile</h3>
-                <p>React Native, Flutter</p>
+            div class="skill-card">
+                <i class="fas fa-laptop fa-2x"></i>
+                <h3>Linux & Windows</h3>
+                <p>Systèmes d'exploitation</p>
             </div>
             <div class="skill-card">
                 <i class="fas fa-server fa-2x"></i>
                 <h3>Back-end</h3>
                 <p>PHP, Java, Python</p>
+            </div>
+            <div class="skill-card">
+                <i class="fas fa-tools fa-2x"></i>
+                <h3>Outils</h3>
+                <p>Eclipse, Visual Studio Code, GitHub</p>    
             </div>
         </div>
     </section>
@@ -110,10 +135,18 @@
                     <i class="fas fa-external-link-alt"></i> Voir le projet
                 </a>
             </div>
+            <div class="skill-card">
+                <h3>Installation Serveur CFT</h3>
+                <p>Installation, configuration et documentation pour le déploiement d'un serveur d'échange de fichiers (CFT) en environnement virtualisé.</p>
+                <a href="https://www.dropbox.com/scl/fi/9x021sgiswztwym32um5h/Documentation-Installation-serveur-CFT.pdf?rlkey=4ccpdmff0359jrzjnz1t9dk1m&st=amg3xbok&dl=0" class="pdf-button" target="_blank">
+                    <i class="fas fa-file-pdf"></i> Voir la documentation
+                </a>
+            </div>
         </div>
     </section>
 
-    <section id="bts-sio" class="section">
+
+      <section id="bts-sio" class="section">
         <h2 class="section-title">BTS SIO</h2>
         <p>
             Le <strong>Brevet de Technicien Supérieur aux Services Informatiques aux Organisations (BTS SIO)</strong> 
