--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
     <section id="competences" class="section">
         <h2 class="section-title">Compétences</h2>
-        <div class="skills-grid">
+        <div class="skills-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 20px;">
             <div class="skill-card">
                 <i class="fas fa-code fa-2x"></i>
                 <h3>Développement Web</h3>
@@ -108,7 +108,7 @@
                 <h3>Base de données</h3>
                 <p>MySQL, PostgreSQL</p>
             </div>
-            div class="skill-card">
+            <div class="skill-card">
                 <i class="fas fa-laptop fa-2x"></i>
                 <h3>Linux & Windows</h3>
                 <p>Systèmes d'exploitation</p>
