--- a/index.html
+++ b/index.html
@@ -131,12 +131,16 @@
         <div class="skills-grid">
             <div class="skill-card">
                 <h3>Projet itération 2</h3>
-                <a href="https://projetiteration.tiiny.site/" class="pdf-button" target="_blank">
+                <p>Cette application de gestion du personnel, en ligne de commande et basée sur une architecture 3-tiers, est conçue pour évoluer en mode multi-utilisateurs avec une base de données. Elle propose trois niveaux d'accès :
+                    Norme employée : lecture seule.
+                    Administrateur de ligue : gestion des employés de sa ligue.
+                    Super-administrateur (ROOT) : contrôle global.</p>
+                <a href="https://projetiteration.tiiny.site" class="pdf-button" target="_blank">
                     <i class="fas fa-external-link-alt"></i> Voir le projet
                 </a>
             </div>
             <div class="skill-card">
-                <h3>Installation Serveur CFT</h3>
+                <h3>Projet d'installation Serveur CFT</h3>
                 <p>Installation, configuration et documentation pour le déploiement d'un serveur d'échange de fichiers (CFT) en environnement virtualisé.</p>
                 <a href="https://www.dropbox.com/scl/fi/9x021sgiswztwym32um5h/Documentation-Installation-serveur-CFT.pdf?rlkey=4ccpdmff0359jrzjnz1t9dk1m&st=amg3xbok&dl=0" class="pdf-button" target="_blank">
                     <i class="fas fa-file-pdf"></i> Voir la documentation
