--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     Norme employée : lecture seule.
                     Administrateur de ligue : gestion des employés de sa ligue.
                     Super-administrateur (ROOT) : contrôle global.</p>
-                <a href="https://projetiteration.tiiny.site" class="pdf-button" target="_blank">
+                <a href="https://projetperso.tiiny.site" class="pdf-button" target="_blank">
                     <i class="fas fa-external-link-alt"></i> Voir le projet
                 </a>
             </div>
