--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
     <section id="profil" class="section">
         <h2 class="section-title">À propos de moi</h2>
         <div class="profile-content">
-            <p>Je m'appelle Anzo Lo. Actuellement étudiant en BTS SIO option SLAM au lycée Charles de Foucauld, je suis passionné par l'informatique, avec un intérêt particulier pour le développement et la sécurité informatique. Mon objectif est de me spécialiser dans le pentesting tout en continuant à explorer la création de solutions innovantes et performantes.</p>
+            <p>Je m'appelle Anzo Lo, étudiant en BTS Services Informatiques aux Organisations (SIO), spécialité SLAM, au lycée Charles de Foucauld. Passionné par l'informatique, j'ai développé un intérêt pour le développement logiciel et la cybersécurité.
+                Mon parcours m'a permis d'acquérir des compétences solides en programmation, gestion de projets et administration des systèmes. Je me passionne pour la création de solutions informatiques innovantes et l'optimisation des systèmes.
+                Mon objectif professionnel est de me spécialiser en cybersécurité, tout en continuant à explorer le développement logiciel, avec la volonté de contribuer à un environnement numérique plus sûr et accessible.</p>
             
             <div class="cv-section">
                 <a href="https://cvalo.tiiny.site/" class="cv-button" target="_blank" download>
