Ajout presentation orale

--- a/index.html
+++ b/index.html
@@ -228,6 +228,10 @@
             </p>
             <br>
             <a href="https://purple-tammara-87.tiiny.site" class="cta-button" style="margin-top: 20px;" target="_blank">Voir le tableau de synthèse</a>
+
+            <a href="https://www.dropbox.com/scl/fi/yf98nzmoqvu551jxgo7ux/Pr-sentation-de.pdf?rlkey=elxl77nldka1h1fckwy5k2uog&st=2xydknf6&dl=0" class="cta-button" target="_blank" download>
+                Voir la présentation diapo
+            </a>
         </div>
     </div>
 </section>
