--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <li><a href="#profil">Profil</a></li>
                 <li><a href="#parcours">Parcours</a></li>
                 <li><a href="#experiences">Expériences</a></li>
+                <li><a href="#stages.html">Stages</a></li>
                 <li><a href="#competences">Compétences</a></li>
                 <li><a href="#projets">Projets</a></li>
                 <li><a href="#bts-sio">BTS SIO</a></li>
@@ -132,7 +133,14 @@
         <h2 class="section-title">Projets</h2>
         <div class="skills-grid">
             <div class="skill-card">
-                <h3>Projet itération 2</h3>
+                <h3>Projet Parking</h3>
+                <p>Création d'une application permettant de gérer des places de parking </p>
+                <a href="https://lienversleprojet1.com" class="pdf-button" target="_blank">
+                    <i class="fas fa-external-link-alt"></i> Voir le projet
+                </a>
+            </div>
+            <div class="skill-card">
+                <h3>Projet Personnel</h3>
                 <p>Cette application de gestion du personnel, en ligne de commande et basée sur une architecture 3-tiers, est conçue pour évoluer en mode multi-utilisateurs avec une base de données. Elle propose trois niveaux d'accès :
                     Norme employée : lecture seule.
                     Administrateur de ligue : gestion des employés de sa ligue.
@@ -146,6 +154,13 @@
                 <p>Installation, configuration et documentation pour le déploiement d'un serveur d'échange de fichiers (CFT) en environnement virtualisé.</p>
                 <a href="https://www.dropbox.com/scl/fi/9x021sgiswztwym32um5h/Documentation-Installation-serveur-CFT.pdf?rlkey=4ccpdmff0359jrzjnz1t9dk1m&st=amg3xbok&dl=0" class="pdf-button" target="_blank">
                     <i class="fas fa-file-pdf"></i> Voir la documentation
+                </a>
+            </div>
+            <div class="skill-card">
+                <h3>Projet API de paiement</h3>
+                <p>Evolution d'une API de paiement dans le cadre d’une réglementation bancaire : le but a été de créer des attributs supplémentaires dans la base de donnée et de permettre l’intégration des données reçues de notre partenaire dans ces nouveaux attributs</p>
+                <a href="https://www.dropbox.com/scl/fi/xzrub72t0t3wwqgipbwm7/Documentation-PASIFAE-PRO.pdf?rlkey=k9gm1tolmo2pakb6qh14x3a5z&st=pwi57lyk&dl=0" class="pdf-button" target="_blank">
+                    <i class="fas fa-external-link-alt"></i> Voir le projet
                 </a>
             </div>
         </div>
