Modification section stage

--- a/stages.html
+++ b/stages.html
@@ -12,18 +12,18 @@
     <!-- Barre de navigation -->
     <div class="nav-container">
         <nav>
-            <a href="index.html" class="logo">AL</a>
+            <a href="portfolio.html" class="logo">AL</a>
             <ul class="nav-links">
-                <li><a href="index.html#accueil">Accueil</a></li>
-                <li><a href="index.html#profil">Profil</a></li>
-                <li><a href="index.html#parcours">Parcours</a></li>
-                <li><a href="index.html#experiences">Expériences</a></li>
-                <li><a href="index.html#competences">Compétences</a></li>
-                <li><a href="index.html#projets">Projets</a></li>
+                <li><a href="portfolio.html#accueil">Accueil</a></li>
+                <li><a href="portfolio.html#profil">Profil</a></li>
+                <li><a href="portfolio.html#parcours">Parcours</a></li>
+                <li><a href="portfolio.html#experiences">Expériences</a></li>
+                <li><a href="portfolio.html#competences">Compétences</a></li>
+                <li><a href="portfolio.html#projets">Projets</a></li>
                 <li><a href="index.html#bts-sio">BTS SIO</a></li>
                 <li><a href="veille-technologique.html">Veille</a></li>
                 <li><a href="stages.html">Stages</a></li>
-                <li><a href="index.html#contact">Contact</a></li>
+                <li><a href="portfolio.html#contact">Contact</a></li>
             </ul>
         </nav>
     </div>
