--- a/stages.html
+++ b/stages.html
@@ -12,18 +12,18 @@
     <!-- Barre de navigation -->
     <div class="nav-container">
         <nav>
-            <a href="portfolio.html" class="logo">AL</a>
+            <a href="index.html" class="logo">AL</a>
             <ul class="nav-links">
-                <li><a href="portfolio.html#accueil">Accueil</a></li>
-                <li><a href="portfolio.html#profil">Profil</a></li>
-                <li><a href="portfolio.html#parcours">Parcours</a></li>
-                <li><a href="portfolio.html#experiences">Expériences</a></li>
-                <li><a href="portfolio.html#competences">Compétences</a></li>
-                <li><a href="portfolio.html#projets">Projets</a></li>
+                <li><a href="index.html#accueil">Accueil</a></li>
+                <li><a href="index.html#profil">Profil</a></li>
+                <li><a href="index.html#parcours">Parcours</a></li>
+                <li><a href="index.html#experiences">Expériences</a></li>
+                <li><a href="index.html#stages">Stages</a></li> <!-- Corrigé -->
+                <li><a href="index.html#competences">Compétences</a></li>
+                <li><a href="index.html#projets">Projets</a></li>
                 <li><a href="index.html#bts-sio">BTS SIO</a></li>
                 <li><a href="veille-technologique.html">Veille</a></li>
-                <li><a href="stages.html">Stages</a></li>
-                <li><a href="portfolio.html#contact">Contact</a></li>
+                <li><a href="index.html#contact">Contact</a></li>
             </ul>
         </nav>
     </div>
@@ -37,20 +37,26 @@
                 <p><strong>Entreprise :</strong> Direction Générale des Finances Publiques (DGFIP)</p>
                 <p><strong>Adresse :</strong> 10 rue Auguste Blanqui 93186 Montreuil cedex</p>
                 <p><strong>Durée :</strong> 29/04/2024 - 03/06/2024</p>
-                <p><strong>Missions :</strong> -Installation, configuration et déployement un serveur d'échange de fichiers en environnement virtualisé
-                                               -Développement un outil de script Bash
-                                               -Vérification le code dans le cadre d'un audit d'accessibilité</p>
+                <p><strong>Missions :</strong></p>
+                <ul>
+                    <li>Installation, configuration et déploiement d'un serveur d'échange de fichiers en environnement virtualisé</li>
+                    <li>Développement d'un outil de script Bash</li>
+                    <li>Vérification du code dans le cadre d'un audit d'accessibilité</li>
+                </ul>
             </div>
             <div class="skill-card">
                 <h3>Stage 2</h3>
                 <p><strong>Entreprise :</strong> Direction Générale des Finances Publiques (DGFIP)</p>
                 <p><strong>Adresse :</strong> 10 rue Auguste Blanqui 93186 Montreuil cedex</p>
                 <p><strong>Durée :</strong> 06/01/2025 - 07/02/2025</p>
-                <p><strong>Missions :</strong> -Participation à la conception et au développement d'une nouvelle fonctionnalité de l'application PASIFAE PRO (Prélèvement à la source pour les entreprises)
-                                               -Développement des scripts SQL
-                                               -Intégration des fichiers XML et gestion des données
-                                               -Modification du code Java pour implémenter la nouvelle fonctionnalité dans l'API existante
-                                               -Validation par tests unitaires</p>
+                <p><strong>Missions :</strong></p>
+                <ul>
+                    <li>Participation à la conception et au développement d'une nouvelle fonctionnalité de l'application PASIFAE PRO (Prélèvement à la source pour les entreprises)</li>
+                    <li>Développement des scripts SQL</li>
+                    <li>Intégration des fichiers XML et gestion des données</li>
+                    <li>Modification du code Java pour implémenter la nouvelle fonctionnalité dans l'API existante</li>
+                    <li>Validation par tests unitaires</li>
+                </ul>
             </div>
         </div>
     </section>
