--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="#profil">Profil</a></li>
                 <li><a href="#parcours">Parcours</a></li>
                 <li><a href="#experiences">Expériences</a></li>
-                <li><a href="#stages.html">Stages</a></li>
+                <li><a href="stages.html">Stages</a></li>
                 <li><a href="#competences">Compétences</a></li>
                 <li><a href="#projets">Projets</a></li>
                 <li><a href="#bts-sio">BTS SIO</a></li>
