--- a/stages.html
+++ b/stages.html
@@ -18,7 +18,7 @@
                 <li><a href="index.html#profil">Profil</a></li>
                 <li><a href="index.html#parcours">Parcours</a></li>
                 <li><a href="index.html#experiences">Expériences</a></li>
-                <li><a href="index.html#stages">Stages</a></li> <!-- Corrigé -->
+                <li><a href="stages.html">Stages</a></li>
                 <li><a href="index.html#competences">Compétences</a></li>
                 <li><a href="index.html#projets">Projets</a></li>
                 <li><a href="index.html#bts-sio">BTS SIO</a></li>
@@ -29,7 +29,7 @@
     </div>
 
     <!-- Contenu de la page Stages -->
-    <section class="section">
+    <section id="stages" class="section">
         <h2 class="section-title">Stages</h2>
         <div class="skills-grid">
             <div class="skill-card">
@@ -60,5 +60,16 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <p>&copy; 2024 Anzo Lo - Portfolio BTS SIO SLAM</p>
+        <div class="social-links">
+            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="#"><i class="fab fa-github"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+        </div>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
