ajout element porfolio

--- a/veille-technologique.html
+++ b/veille-technologique.html
@@ -330,8 +330,9 @@
                     <li><a href="./index.html#about">À propos</a></li>
                     <li><a href="./index.html#skills">Compétences</a></li>
                     <li><a href="./index.html#projects">Projets</a></li>
-                    <li><a href="./stage.html">Stage</a></li>
-                    <li><a href="./veille-technologique.html">Veille Technologique</a></li>
+                    <li><a href="./stage.html">Stages</a></li>
+                    <li><a href="./bts-sio.html">E5|BTS SIO</a></li>
+                    <li><a href="./veille-technologique.html">Veille</a></li>
             </ul>
         </nav>
     </div>
