--- a/stages.html
+++ b/stages.html
@@ -134,10 +134,11 @@
             <nav>
                 <ul>
                     <li><a href="index.html#about">À propos</a></li>
-                    <li><a href="index.html#skills">Compétences</a></li>
-                    <li><a href="index.html#projects">Projets</a></li>
-                    <li><a href="stage.html">Stage</a></li>
-                    <li><a href="veille-technologique.html">Veille Technologique</a></li>
+                    <li><a href="./index.html#skills">Compétences</a></li>
+                    <li><a href="./index.html#projects">Projets</a></li>
+                    <li><a href="stage.html">Stages</a></li>
+                    <li><a href="./bts-sio.html">E5|BTS SIO</a></li>
+                    <li><a href="veille-technologique.html">Veille</a></li>
                 </ul>
             </nav>
         </div>
