--- a/bts-sio.html
+++ b/bts-sio.html
@@ -266,7 +266,7 @@
                         </ul>
                         <p>Cette épreuve évalue les compétences du bloc "Support et mise à disposition de services informatiques". Le candidat présente son parcours professionnel pendant 10 minutes, suivi d'un échange de 30 minutes avec le jury pour expliciter ses réalisations.</p>
                         <div class="btn-container">
-                            <a href="ttps://purple-tammara-87.tiiny.site" class="btn" target="_blank"><i class="fas fa-table"></i> Voir mon tableau de synthèse</a>
+                            <a href="./doc/Tableau de synthèse - Epreuve E5 - BTS SIO 2025.pdf" class="btn" target="_blank"> Voir mon tableau de synthèse</a>
                         </div>
                     </div>
                 </div>
