--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                     <div class="project-info">
                         <h3>Portfolio</h3>
                         <p>Application de gestion de stationnement permettant de suivre les emplacements disponibles et d'optimiser l'utilisation des espaces de parking.</p>
-                        <a href="./doc/portfolio.pdf" class="btn" target="_blank">Voir le projet</a>
+                        <a href="./doc/Documentation Portfolio.pdf" class="btn" target="_blank">Voir le projet</a>
                     </div>
                 </div>
                 <!-- Projet 0 -->
