--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 <div class="project-card">
                     <div class="project-info">
                         <h3>Portfolio</h3>
-                        <p>Application de gestion de stationnement permettant de suivre les emplacements disponibles et d'optimiser l'utilisation des espaces de parking.</p>
+                        <p>Création d'un site web personnel pour présenter mes compétences, projets et parcours académique dans le cadre de mon BTS SIO SLAM.</p>
                         <a href="./doc/Documentation Portfolio.pdf" class="btn" target="_blank">Voir le projet</a>
                     </div>
                 </div>
@@ -224,7 +224,7 @@
                 <div class="project-card">
                     <div class="project-info">
                         <h3>Veille</h3>
-                        <p>Application de gestion de stationnement permettant de suivre les emplacements disponibles et d'optimiser l'utilisation des espaces de parking.</p>
+                        <p>Mise en place d'un système de veille technologique pour rester informé des dernières évolutions et innovations dans les LLM.</p>
                         <a href="./doc/portfolio.pdf" class="btn" target="_blank">Voir le projet</a>
                     </div>
                 </div>
