--- a/stage.html
+++ b/stage.html
@@ -254,7 +254,7 @@
                             <h4 style="color: var(--primary-color); margin-bottom: 15px; font-size: 1.2rem;"> Développement d'un outil de script Bash</h4>
                             <p style="margin-bottom: 15px;">Création d'un menu en shell qui affiche et automatise les tests d'une application seuil du prélèvement à la source.</p>
                             <div style="display: flex; gap: 10px;">
-                                <a href="./doc/Documentation developpement script.pdf.pdf" class="btn" style="padding: 8px 15px; font-size: 0.9rem;" target="_blank">Documentation</a>
+                                <a href="./doc/Documentation developpement script.pdf" class="btn" style="padding: 8px 15px; font-size: 0.9rem;" target="_blank">Documentation</a>
                                 <a href="https://github.com/anzo-l/Developpement-script-bash-/blob/main/script.sh" class="btn" style="padding: 8px 15px; font-size: 0.9rem;" target="_blank">Code source</a>
                             </div>
                         </div>
