--- a/stage.html
+++ b/stage.html
@@ -236,7 +236,6 @@
                         <ul>
                             <li>Installation, configuration et déploiement d'un serveur d'échange de fichiers en environnement virtualisé</li>
                             <li>Développement d'un outil de script Bash</li>
-                            <li>Vérification du code dans le cadre d'un audit d'accessibilité</li>
                         </ul>
                     </div>
                     
@@ -353,7 +352,7 @@
                             <li>Développement des scripts SQL</li>
                             <li>Intégration des fichiers XML et gestion des données</li>
                             <li>Modification du code Java pour implémenter la nouvelle fonctionnalité dans l'API existante</li>
-                            <li>Validation par tests unitaires</li>
+                            <li>Validation par tests </li>
                         </ul>
                     </div>
                     
