--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                        
             </div>
                     <div class="cv-button-container">
-                        <a href="" class="btn" target="_blank"><i class="fas fa-file-pdf"></i> Télécharger mon CV</a>
+                        <a href="./doc/CV AnzoLo (2).pdf" class="btn" target="_blank"><i class="fas fa-file-pdf"></i> Télécharger mon CV</a>
                     </div>
                 </div>
             </div>
